<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2015 Intel Corporation
  ~ This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0,
  ~  which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html . https://github.com/viqet
  ~  Contributors:
  ~     Intel Corporation - initial API and implementation and/or initial documentation
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item  
        android:id="@+id/deletePhoto"  
        android:title="@string/deletePhoto"/>
    <item  
        android:id="@+id/takeNewPhoto"  
        android:title="@string/takeNewPhoto"/>
    <item  
        android:id="@+id/viewPhoto"  
        android:title="@string/viewPhoto"/>  
    <item  
        android:id="@+id/viewPhotoDetails"  
        android:title="@string/viewPhotoDetails"/>
</menu>
