<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2015 Intel Corporation
  ~ This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0,
  ~  which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html . https://github.com/viqet
  ~  Contributors:
  ~     Intel Corporation - initial API and implementation and/or initial documentation
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/home_background_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/start_single_test_button"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:background="@android:color/transparent"
                android:src="@drawable/photo_quality_button"
                android:scaleType="fitXY"
                android:padding="@dimen/start_button_padding"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white"
                android:contentDescription="@string/start_single_label"/>

            <TextView
                android:id="@+id/tv_single_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white"
                android:text="@string/start_single_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:text="@string/text_start_single_test_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/start_button"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:background="@android:color/transparent"
                android:src="@drawable/camera_quality_button"
                android:scaleType="fitXY"
                android:padding="@dimen/start_button_padding"
                android:contentDescription="@string/start_camera_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white"
                android:text="@string/start_camera_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:text="@string/text_start_label"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="0.1"
       android:background="@android:color/transparent"
       android:gravity="center_horizontal|center_vertical"
       android:textColor="@color/tv_version_background"
       android:id="@+id/tv_version"/>
</LinearLayout>

